Third push. In addition to quality of life improvements, the app fully implements a ChatGPT chat bot that can display all kinds of information using API calls.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,18 @@
     <string name="put_text_here">Put text here</string>
     <string name="trip_information">Trip Information</string>
     <string name="trip_list">Trip List</string>
+    <string name="title_activity_connectivity">ConnectivityActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_gallery">Gallery</string>
+    <string name="menu_slideshow">Slideshow</string>
+
+    <!-- API Keys-->
+    <string name="openAI_api_key">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</string>
+
 </resources>
